(Fix Vul: Nginx) 修复 index.html 中图片路径

--- a/n/nginx/1/src/index.html
+++ b/n/nginx/1/src/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Nginx整数溢出漏洞 CVE-2017-7529 Demo</h1>
     <hr>
-    <img src="./demo.png" />
+    <img src="/proxy/demo.png" />
 
 <hr>
 
